--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=spring-security
 server.port = 8000
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url = jdbc:mysql://localhost:3306/security_demo?useSSL=false
+spring.datasource.url = jdbc:mysql://172.20.10.6:3306/security_demo?useSSL=false
 spring.datasource.username = root
 spring.datasource.password = 
 
