--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=spring-security
 server.port = 8000
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url = jdbc:mysql://172.20.10.6:3306/security_demo?useSSL=false
+spring.datasource.url = jdbc:mysql://localhost:3306/security_demo?useSSL=false
 spring.datasource.username = root
 spring.datasource.password = 
 
@@ -12,6 +12,6 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
 
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type=TRACE
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type=TRACE
 spring.main.allow-circular-references=true
