--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,11 @@
         	<groupId>com.mysql</groupId>
         	<artifactId>mysql-connector-j</artifactId>
     	</dependency>
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<scope>runtime</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
