--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,21 +2,22 @@ spring.application.name=spring-security
 server.port = 8000
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 # === Mysql ===
-#spring.datasource.url = jdbc:mysql://localhost:3306/security_demo?useSSL=false
-#spring.datasource.username = root
-#spring.datasource.password =
+spring.datasource.url = jdbc:mysql://localhost:3306/security_demo?useSSL=false
+spring.datasource.username = root
+spring.datasource.password =
 
 # === postgresSql ===
-spring.datasource.url=jdbc:postgresql://localhost:5432/spring-security
-spring.datasource.username=postgres
-spring.datasource.password=Hoan1907!
+#spring.datasource.url=jdbc:postgresql://localhost:5432/spring-security
+#spring.datasource.username=postgres
+#spring.datasource.password=Hoan1907!
 
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 # === Mysql ===
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 # === postgresSql ===
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
