--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,10 @@ spring.application.name=spring-security
 server.port = 8000
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 # === Mysql ===
-spring.datasource.url = jdbc:mysql://localhost:3306/security_demo?useSSL=false
-spring.datasource.username = root
-spring.datasource.password =
+spring.datasource.url = jdbc:mysql://${DATABASE_HOST:localhost}:${DATABASE_PORT:3306}/${DATABASE_NAME:security-demo}
+spring.datasource.username = ${DATABASE_HOST:root}
+spring.datasource.password = ${DATABASE_PASSWORD:}
+spring.datasource.driver-class-name: com.mysql.cj.jdbc.Driver
 
 # === postgresSql ===
 #spring.datasource.url=jdbc:postgresql://localhost:5432/spring-security
