--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,22 +1,15 @@
 spring.application.name=spring-security
 server.port = 8000
-## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-# === Mysql ===
-spring.datasource.url = jdbc:mysql://localhost:3306/security_demo?useSSL=false
-spring.datasource.username = root
-spring.datasource.password =
 
-# === postgresSql ===
-#spring.datasource.url=jdbc:postgresql://localhost:5432/spring-security
-#spring.datasource.username=postgres
-#spring.datasource.password=Hoan1907!
+## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
+#spring.datasource.url = jdbc:mysql://localhost:3306/security_demo?useSSL=false
+spring.datasource.url = jdbc:mysql://${DATABASE_HOST:localhost}:${DATABASE_PORT:3306}/${DATABASE_NAME:security_demo}
+spring.datasource.username = ${DATABASE_USER:root}
+spring.datasource.password = ${DATABASE_PASSWORD:}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 ## Hibernate Properties
-# The SQL dialect makes Hibernate generate better SQL for the chosen database
-# === Mysql ===
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
-# === postgresSql ===
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
